# AUTOOS

./: .env.example  .env.render  .gitignore  .pre-commit-config.yaml  .render-buildpacks.yml  ACCESS_CODE_SYSTEM.md  ADVANCED_FEATURES.md  AGENT_CAPABILITIES.md  API_KEYS_SETUP_GUIDE.md  AUTOOS_OMEGA_PHASE_9_FINAL_SUMMARY.md  AUTOOS_VS_CLAUDE.md  BEST_FREE_HOSTING_COMPARISON.md  COMPLETE_ARCHITECTURE.md  COMPLETE_DEPLOYMENT_PLAN.md  COMPLETE_FEATURES.md  COMPLETE_SYSTEM_SUMMARY.md  COMPLETE_UI_IMPLEMENTATION.md  COPY_PASTE_THIS.txt  CROSS_PLATFORM_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_BACKEND_NOW.md  DEPLOY_NOW.md  DEPLOY_RENDER_EASY.md  DEPLOY_STEP_BY_STEP.md  DESKTOP_APP_GUIDE.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  FREE_PUBLISHING_GUIDE.md  GITHUB_PUSH_INSTRUCTIONS.md  HTTPS_SETUP_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LAUNCH_CHECKLIST.md  NEW_FEATURES_SUMMARY.md  PAYMENT_INTEGRATION_GUIDE.md  PAYMENT_SETUP.md  PHASE_9_COMPLETE.md  PHASE_9_PROGRESS.md  (+49 more)
config/: prometheus.yml
frontend/desktop/: main.js  package.json
frontend/mobile/: App.tsx  package.json
frontend/web/: README.md  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
infrastructure/private-cloud/: deploy-secure.sh
infrastructure/private-cloud/deployment/: secure-deployment.yaml
infrastructure/private-cloud/kubernetes/: namespace.yaml  network-policy.yaml
infrastructure/private-cloud/monitoring/: security-monitoring.yaml
scripts/: init-db.sql  test_qr_payment.py
src/autoos/: __init__.py
(+87 files in other folders)
